OnboardingV2Minimal/force-app/main/default/objects/Contract.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>