OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Account_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_1__c</fullName>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>