OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Account_Name_Contract__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Contract__c</fullName>
    <formula>Opportunity_to_Contract__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>* Account Name</label>
    <type>Text</type>
</CustomField>