OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ACH_Base_App__c.field-meta.xml
<CustomField>
    <fullName>ACH_Base_App__c</fullName>
    <label>ACH - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>