OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ACH_Completed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Completed__c</fullName>
    <label>ACH Completed</label>
    <type>Date</type>
</CustomField>