OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ACH_Summary__c.field-meta.xml
<CustomField>
    <fullName>ACH_Summary__c</fullName>
    <label>ACH Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>