OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ACH_W9_Age__c.field-meta.xml
<CustomField>
    <fullName>ACH_W9_Age__c</fullName>
    <formula>IF(ISBLANK(ACH_W9_Completed__c), TODAY() - Pending_Initial_Review__c, ACH_W9_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACH/W9 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>