OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ACH_W9_Completed__c.field-meta.xml
<CustomField>
    <fullName>ACH_W9_Completed__c</fullName>
    <label>ACH/W9 Completed</label>
    <type>Date</type>
</CustomField>