OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ACH_W9_Sent_to_AP__c.field-meta.xml
<CustomField>
    <fullName>ACH_W9_Sent_to_AP__c</fullName>
    <label>ACH/W9 Sent to AP?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>