OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Agreement_Age__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Age__c</fullName>
    <formula>IF(ISBLANK(Agreement_Complete__c), TODAY() - Pending_Initial_Review__c, Agreement_Complete__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>