OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Agreement_Complete__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Complete__c</fullName>
    <label>Agreement Completed</label>
    <type>Date</type>
</CustomField>