OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Agreement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Summary__c</fullName>
    <label>Agreement Summary</label>
    <type>TextArea</type>
</CustomField>