OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/AOE_Order_Entry_Login__c.field-meta.xml
<CustomField>
    <fullName>AOE_Order_Entry_Login__c</fullName>
    <label>AOE Order Entry Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>