OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/AOE_Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>AOE_Temporary_Password__c</fullName>
    <label>AOE Temporary Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>