OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Application_Age__c.field-meta.xml
<CustomField>
    <fullName>Application_Age__c</fullName>
    <formula>IF(ISBLANK(Application_Completed__c), TODAY() - Pending_Initial_Review__c, Application_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>