OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Application_Completed__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed__c</fullName>
    <label>Application Completed</label>
    <type>Date</type>
</CustomField>