OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#33CC00</color>
                <label>New</label>
            </value>
            <value>
                <fullName>Paperwork Sent</fullName>
                <color>#FFFFFF</color>
                <label>Paperwork Sent</label>
            </value>
            <value>
                <fullName>Pending Sales</fullName>
            </value>
            <value>
                <fullName>Pending Initial Review</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <color>#FFFFFF</color>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <color>#FF0000</color>
                <label>Denied</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Setup Complete</fullName>
                <color>#009900</color>
                <label>Setup Complete</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>