OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/ATTUID__c.field-meta.xml
<CustomField>
    <fullName>ATTUID__c</fullName>
    <label>ATTUID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>