OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Auto_Ins_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Ins_Exp_Date__c</fullName>
    <label>Auto Ins Exp Date</label>
    <type>Date</type>
</CustomField>