OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/AX_Setup_Base_App__c.field-meta.xml
<CustomField>
    <fullName>AX_Setup_Base_App__c</fullName>
    <label>AX Setup - Base App</label>
    <length>20</length>
    <type>Text</type>
</CustomField>