OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Axapta_Acct_Owner__c.field-meta.xml
<CustomField>
    <fullName>Axapta_Acct_Owner__c</fullName>
    <label>Axapta Acct Owner</label>
    <type>TextArea</type>
</CustomField>