OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Background_Check_Age__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Age__c</fullName>
    <formula>IF(ISBLANK(Background_Check_Completed__c), TODAY() -  Background_Check_Requested__c, Background_Check_Completed__c - Background_Check_Requested__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Check Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>