OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Background_Check_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Base_App__c</fullName>
    <label>Background Check - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>