OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Background_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Completed__c</fullName>
    <label>Background Check Completed</label>
    <type>Date</type>
</CustomField>