OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Background_Check_Requested__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Requested__c</fullName>
    <label>Background Check Requested</label>
    <type>Date</type>
</CustomField>