OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Background_Check_Summary__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Summary__c</fullName>
    <label>Background Check Summary</label>
    <type>TextArea</type>
</CustomField>