OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Base_Account_Age__c.field-meta.xml
<CustomField>
    <fullName>Base_Account_Age__c</fullName>
    <formula>IF(ISBLANK(Base_Account_Completed__c), TODAY() - Pending_Initial_Review__c, Base_Account_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Account Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>