OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Base_Account_Completed__c.field-meta.xml
<CustomField>
    <fullName>Base_Account_Completed__c</fullName>
    <label>Base Account Completed</label>
    <type>Date</type>
</CustomField>