OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Base_Account_Summary__c.field-meta.xml
<CustomField>
    <fullName>Base_Account_Summary__c</fullName>
    <label>Base Account Summary</label>
    <type>TextArea</type>
</CustomField>