OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/BASS_DLR_Compliance_Link_Sent__c.field-meta.xml
<CustomField>
    <fullName>BASS_DLR_Compliance_Link_Sent__c</fullName>
    <label>BASS DLR Compliance Link Sent</label>
    <type>Date</type>
</CustomField>