OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Business License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>