OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Business_License_Completed__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Completed__c</fullName>
    <label>Business License Completed</label>
    <type>Date</type>
</CustomField>