OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Business_License_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Summary__c</fullName>
    <label>Business License Summary</label>
    <type>TextArea</type>
</CustomField>