OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Business_Licenses_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Business_Licenses_Base_App__c</fullName>
    <label>Business Licenses - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>