OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/CCAF__c.field-meta.xml
<CustomField>
    <fullName>CCAF__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>CCAF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>