OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/CCAF_Summary__c.field-meta.xml
<CustomField>
    <fullName>CCAF_Summary__c</fullName>
    <label>CCAF Summary</label>
    <type>TextArea</type>
</CustomField>