OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/CGM_Login__c.field-meta.xml
<CustomField>
    <fullName>CGM_Login__c</fullName>
    <label>CGM Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>