OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/CGM_Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>CGM_Temporary_Password__c</fullName>
    <label>CGM Temporary Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>