OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Chuzo_app__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_app__c</fullName>
    <label>Chuzo Agreement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>