OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_App_Status_BA__c.field-meta.xml
<CustomField>
    <fullName>Compliance_App_Status_BA__c</fullName>
    <label>Compliance App Status - Base App</label>
    <length>15</length>
    <type>Text</type>
</CustomField>