OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_App_Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>Compliance_App_Status_Completed__c</fullName>
    <label>Compliance App Status Completed</label>
    <type>Date</type>
</CustomField>