OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_App_Status_Progress__c.field-meta.xml
<CustomField>
    <fullName>Compliance_App_Status_Progress__c</fullName>
    <label>Compliance App Status In Progress</label>
    <type>Date</type>
</CustomField>