OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Application_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Compliance Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Approved Conditionally</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>