OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_Application_Status_Age__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Application_Status_Age__c</fullName>
    <formula>IF(ISBLANK(Compliance_App_Status_Completed__c), TODAY() -  Compliance_App_Status_Progress__c , Compliance_App_Status_Completed__c - Compliance_App_Status_Progress__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Application Status Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>