OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <label>Compliance Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>