OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Compliance_Rep__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rep__c</fullName>
    <label>Compliance Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jessica</fullName>
            </value>
            <value>
                <fullName>Tami</fullName>
            </value>
            <value>
                <fullName>Markela</fullName>
            </value>
            <value>
                <fullName>Babe</fullName>
            </value>
            <value>
                <fullName>Ashlea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>