OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Contract_Number_PV__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_PV__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,PV_Contract_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number PV</label>
    <type>Text</type>
</CustomField>