OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Base Application - with Chuzo</fullName>
            </value>
            <value>
                <fullName>Program Base Application - without Chuzo</fullName>
            </value>
            <value>
                <fullName>Program Base Application - with Chuzo (No Personal Guarantee)</fullName>
            </value>
            <value>
                <fullName>Base Application - Infrastructure</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>