OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Count_Number_of_Agreements_on_Contract__c.field-meta.xml
<CustomField>
    <fullName>Count_Number_of_Agreements_on_Contract__c</fullName>
    <label>Count Number of Agreements on Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>