OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>