OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Credit_Check_Age__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Age__c</fullName>
    <formula>IF(ISBLANK(Credit_Check_Completed__c), TODAY() - Pending_Initial_Review__c, Credit_Check_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Check Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>