OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Credit_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Completed__c</fullName>
    <label>Credit Check Completed</label>
    <type>Date</type>
</CustomField>