OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Credit_Check_Summary__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Summary__c</fullName>
    <label>Credit Check Summary</label>
    <type>TextArea</type>
</CustomField>