OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/D2D_Amendment__c.field-meta.xml
<CustomField>
    <fullName>D2D_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check this box if a dealer is currently set up with Frontier but not setup to sell D2D. By checking this box a notification will be sent to the Onboarding team advising them to enroll customer in the D2D program.</inlineHelpText>
    <label>D2D Amendment?</label>
    <type>Checkbox</type>
</CustomField>