OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dealer_Code_Age__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Age__c</fullName>
    <formula>IF(ISBLANK(Dealer_Code_Completed__c), TODAY() -  Dealer_Code_Requested__c , Dealer_Code_Completed__c - Dealer_Code_Requested__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Code Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>