OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dealer_Code_Completed__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Completed__c</fullName>
    <label>Dealer Code Completed</label>
    <type>Date</type>
</CustomField>