OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dealer_Code_Requested__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Requested__c</fullName>
    <label>Dealer Code Requested</label>
    <type>Date</type>
</CustomField>