OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dealer_Code_Summary__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Summary__c</fullName>
    <label>Dealer Code Summary</label>
    <type>TextArea</type>
</CustomField>