OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dealer_Codes__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Codes__c</fullName>
    <label>Dealer Codes</label>
    <type>TextArea</type>
</CustomField>