OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dedicated_Sale_Referral_Number__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Sale_Referral_Number__c</fullName>
    <label>Dedicated Sale Referral Number</label>
    <type>Phone</type>
</CustomField>