OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Dedicated_URL__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_URL__c</fullName>
    <label>Dedicated URL</label>
    <type>Url</type>
</CustomField>