OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Drivers_License_Age__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Age__c</fullName>
    <formula>IF(ISBLANK(Drivers_License_Completed__c), TODAY() - Pending_Initial_Review__c, Drivers_License_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drivers License Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>